@@ -3,7 +3,15 @@
   <groupId>com.adp.maven</groupId>
   <artifactId>MavenProject</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
 
+<jacoco.version>0.7.1.201405082137</jacoco.version>
+<jacoco.outputDir>${project.build.directory}/jacoco</jacoco.outputDir>
+<jacoco.out.ut.file>jacoco-ut.exec</jacoco.out.ut.file>
+<jacoco.out.it.file>jacoco-it.exec</jacoco.out.it.file>
+<sonar.jacoco.reportPath>${jacoco.outputDir}/${jacoco.out.ut.file}</sonar.jacoco.reportPath>
+<sonar.jacoco.itReportPath>${jacoco.outputDir}/${jacoco.out.it.file}</sonar.jacoco.itReportPath>
 <dependencies>
     <dependency>
       <groupId>org.testng</groupId>
@@ -156,6 +164,10 @@
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.12.4</version>
+	      <configuration>
+<argLine>-Xmx1G -XX:MaxPermSize=512m -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled ${jacoco.agent.ut.arg}</argLine>
+    </configuration>
+
         <executions>
           <execution>
             <id>default-test</id>
@@ -200,6 +212,14 @@
       <plugin>
  		<artifactId>maven-failsafe-plugin</artifactId>
  			<version>2.20</version>
+	      <configuration>
+<argLine>-Xmx1G -XX:MaxPermSize=512m -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled ${jacoco.agent.it.arg}</argLine>
+<includes>
+<includes>
+<include>**/*IT*</include>
+</includes>
+</configuration>
+
 		 <executions>
 		 <execution>
             <id>integration-test</id>
@@ -210,7 +230,7 @@
           </execution>
         </executions>
 </plugin>
-<!--<plugin>
+<plugin>
 <groupId>org.jacoco</groupId>
 <artifactId>jacoco-maven-plugin</artifactId>
 <version>0.7.1.201405082137</version>
@@ -240,7 +260,7 @@
 </configuration>
 </execution>
 </executions>
-</plugin>-->
+</plugin>
         </plugins>
   </build>
  </project>
